# anki-bible-stats-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  app.json  deploy.sh
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  tests.yml
ankistats/: CLAUDE.md  Cargo.toml  README.md
ankistats/src/: bible.rs  book_name_parser.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  verse_parser.rs
ankistats/tests/: book_name_parser_integration.rs  verse_parser_integration.rs
ankistats/tests/data/: .gitignore
arcstats/: Cargo.toml
arcstats/src/: lib.rs  loader.rs  main.rs  models.rs  stats.rs
backend/: CLAUDE.md  Cargo.toml
backend/src/: main.rs
faithstats/: CLAUDE.md  Cargo.toml
faithstats/src/: lib.rs  main.rs  models.rs
frontend/: .dockerignore  .env.example  .prettierignore  CLAUDE.md  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: hooks.server.ts
frontend/src/lib/api/: client.ts  schema.d.ts
frontend/src/lib/components/: AnkiDailyLearningProgressChart.svelte  AnkiWeeklyLearningProgressChart.svelte  BookStatsChart.svelte  Card.svelte  DailyStudyChart.svelte  TopPlacesChart.svelte  WeeklyChurchChart.svelte  WeeklyStudyChart.svelte
frontend/src/lib/theme/: chartColors.ts
frontend/src/lib/utils/: timeFormat.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
prayerstats/: Cargo.toml
prayerstats/src/: db.rs  lib.rs  main.rs  models.rs
readingstats/: Cargo.toml
readingstats/src/: db.rs  lib.rs  main.rs  models.rs
src/: db.rs  lib.rs  main.rs  models.rs  verse_parser.rs
statsutils/: Cargo.toml
statsutils/src/: config.rs  date_periods.rs  lib.rs  sqlite_functions.rs
tests/: book_name_parser_integration.rs  verse_parser_integration.rs
