[package]
name = "anki-bible-stats"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled", "functions"] }
anyhow = "1.0.100"
tabled = "0.20.0"
chrono = "0.4.42"
chrono-tz = "0.10.4"
clap = { version = "4.5.49", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
axum = "0.8.6"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
