[package]
name = "ankistats"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled", "functions"] }
anyhow = "1.0.100"
tabled = "0.20.0"
chrono = "0.4.42"
chrono-tz = "0.10.4"
clap = { version = "4.5.49", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
utoipa = "5.3.1"
statsutils = { path = "../statsutils" }
