[package]
name = "backend"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
ankistats = { path = "../ankistats" }
faithstats = { path = "../faithstats" }
axum = "0.8.6"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
anyhow = "1.0.100"
